--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ nav ul
     background-repeat: no-repeat;   
 }
 
-#cakes{
+.cakes{
     background-image: url(./assets/cake_bg.jpg);
     background-size: cover;
     background-repeat: no-repeat;   
