--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ nav ul
     display: flex;
     height: 400px;
     width: auto;
-    background-color: rgba(100, 249, 237,0.4);
+/*     background-color: rgba(100, 249, 237,0.4); */
 }
 #poster #post{
     padding: 30px 50px 0px 130px;
